Dark mode color fixes

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -44,6 +44,6 @@ body, #__next {
   }
 
   .token-row {
-    @apply flex items-center bg-white px-4 rounded-lg shadow-md;
+    @apply flex items-center bg-white dark:bg-gray-800 px-4 rounded-lg shadow-md;
   }
 }
